# sr

./: CMakeLists.txt
common/: CMakeLists.txt  my_config.cpp  my_config.h  my_signal.c
contrib/: CMakeLists.txt
contrib/libevent/: Makefile.in  aclocal.m4  configure  evdns.c  event-config.h  event.c  evhttp.h  http-internal.h  http.c
contrib/libevent/test/: Makefile.am  Makefile.in
conv2/: main.c  tokenizer.l
gui/: conv2.pyw  conv2.ui
stemmer2/: CMakeLists.txt  main.cpp  stem.cpp  stem.h  tok.cpp  tok.h  tokenizer.l
stemmer2/sb/: CMakeLists.txt
testbed/: CMakeLists.txt  gen.ini  gen_config.cpp  gen_config.h  main.c  markov.c  markov.h
web/: 1.sh  controller.py  stem_result.py
web/templates/: conv2.html  index.html  stemmer2.html
